--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.16", features = ["derive"] }
 reqwest = { version="0.12.7", features = ["blocking"]}
+rpm = "0.15.1"
 serde = { version = "1.0.209", features = ["derive"] }
 serde_json = "1.0.127"
